# nixos-benchmark

./: .gitignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  COMPLETION_SUMMARY.md  README.md  REFACTORING.md  STEAM_GAMES.md  flake.nix  nixos_benchmark.py  nixos_benchmark.py.bak  pts_nix.py  pyproject.toml  run-benchmarks.sh  shell.nix  simple_benchmarks.py  transfer.sh
nixos_benchmark/: __init__.py  __main__.py  benchmark_registry.py  cli.py  models.py  output.py  system_checks.py  system_info.py  template.html  utils.py
nixos_benchmark/benchmarks/: __init__.py  base.py  bonnie.py  clpeak.py  compression.py  cpu.py  crypto.py  cryptsetup.py  database.py  ffmpeg.py  fio.py  furmark.py  geekbench.py  glmark2.py  gpu.py  hashcat.py  io.py  ioping.py  iozone.py  iperf3.py  john.py  lz4.py  media.py  memory.py  netperf.py  network.py  openssl.py  pigz.py  scoring.py  sevenzip.py  sqlite_mixed.py  sqlite_speedtest.py  steam_base.py  steam_generic.py  steam_sotr.py  stockfish.py  stress_ng.py  stressapptest.py  sysbench_cpu.py  sysbench_memory.py  (+7 more)
nixos_benchmark/parsers/: __init__.py  output_parsers.py
